<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:textAlignment="center"
    tools:context=".model.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="DATOS PRESTAMO"
        app:titleTextColor="#FFFFFF" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="391dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        app:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fabShowPayments"
        app:layout_constraintStart_toEndOf="@+id/fabDeleteLoan"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDeleteLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        app:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="MONTO"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <EditText
        android:id="@+id/showDataLoanDateText"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Proximo pago"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDataLoanPhoneNumberText" />

    <Button
        android:id="@+id/routeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorButton"
        android:text="RUTA"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/amountButton"
        app:layout_constraintTop_toBottomOf="@+id/routeEditText" />

    <EditText
        android:id="@+id/showDataLoanAddressHomeText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/addressHomeText_string"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDataLoanLastNameText" />

    <EditText
        android:id="@+id/showDataLoanQuotasText"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Cuotas"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDataLoanDateText" />

    <EditText
        android:id="@+id/showDataLoanLastNameText"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/lastNameText_string"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/showDataLoanNameText"
        app:layout_constraintTop_toBottomOf="@+id/amountButton" />

    <Button
        android:id="@+id/amountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorButton"
        android:text="ACEPTAR"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountEditText" />

    <EditText
        android:id="@+id/showDataLoanAddressJobText"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/addressJobText_string"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDataLoanAddressHomeText" />

    <EditText
        android:id="@+id/showDataLoanLoanText"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Prestamo"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDataLoanQuotasText" />

    <EditText
        android:id="@+id/showDataLoanPhoneNumberText"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/phoneNumberText_string"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDataLoanAddressJobText" />

    <EditText
        android:id="@+id/showDataLoanNameText"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/nameText_string"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountButton" />

    <EditText
        android:id="@+id/routeEditText"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="RUTA"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amountEditText"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShowPayments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        app:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="?android:attr/actionModeFindDrawable" />

    <EditText
        android:id="@+id/balanceFaulty"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Saldo Faltante"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/paymentCredits"
        app:layout_constraintTop_toBottomOf="@+id/showDataLoanQuotasText" />

    <EditText
        android:id="@+id/paymentCredits"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/showDataLoanLoanText"
        app:layout_constraintTop_toBottomOf="@+id/showDataLoanQuotasText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-10dp"
        android:text="Numero de Telefono"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/showDataLoanPhoneNumberText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-10dp"
        android:text="Fecha del Prestamo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/showDataLoanDateText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-10dp"
        android:text="Cuotas"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/showDataLoanQuotasText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-10dp"
        android:text="Prestamo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/showDataLoanLoanText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="-10dp"
        android:text="Abono"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/paymentCredits"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginBottom="-10dp"
        android:text="saldo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/balanceFaulty"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-10dp"
        android:text="Dirección 1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/showDataLoanAddressHomeText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-10dp"
        android:text="Dirección 2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/showDataLoanAddressJobText"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>